@@ -46,6 +46,18 @@ public final class FileUtil {
     private FileUtil() {
         throw new AssertionError();
     }
+    
+    /**
+     * Takes two paths and combines them into a valid path string
+     * for the current OS.
+     * <p>
+     * Similar to the Path.Combine() function in .Net.
+     */
+    public static String pathCombine (String path1, String path2) {
+        File file1 = new File(path1);
+        File file2 = new File(file1, path2);
+        return file2.getPath();
+    }      
 
     /**
      * <p>
